syntax = "proto3";

option csharp_namespace = "pyrewall.privileged.client";

package systeminfo;

service SystemInfo {
  rpc GetSystemInfo (voidNoParam) returns (SystemInfoResponse);
}

message voidNoParam {}

message SystemInfoResponse {
  string hostname = 1;
}